# bugs

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: lib.rs  main.rs
